[gd_scene load_steps=12 format=3 uid="uid://c2cbaj6378akv"]

[ext_resource type="Script" uid="uid://by4gpl2kxnvrs" path="res://Scripts/Objects/Miscs/GenericMiscItem.gd" id="1_j8dwv"]
[ext_resource type="Resource" uid="uid://hv2hiplc6dpl" path="res://tres/Resources/Pickups/Pickup_ID_000.tres" id="2_4x66r"]
[ext_resource type="Texture2D" uid="uid://3cxiafknnd0x" path="res://Sprites/Objects/Miscs/Small_HealthCapsule.png" id="3_nimjx"]

[sub_resource type="Animation" id="Animation_yymqc"]
resource_name = "Disappearing"
length = 0.1
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_syb24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rkn2d"]
resource_name = "kill"
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"kill"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0f6c0"]
_data = {
&"Disappearing": SubResource("Animation_yymqc"),
&"RESET": SubResource("Animation_syb24"),
&"kill": SubResource("Animation_rkn2d")
}

[sub_resource type="Animation" id="Animation_kaway"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 12, 12), Rect2(12, 0, 12, 12), Rect2(24, 0, 12, 12), Rect2(12, 0, 12, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxrlf"]
_data = {
&"HealthCapsule_Small": SubResource("Animation_kaway")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1afij"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_ortlo"]
radius = 6.0

[node name="HealthCapsule_Small" type="CharacterBody2D" node_paths=PackedStringArray("visibility_mask", "Item_Area2D", "Item_Body") groups=["Collectables"]]
z_index = 20
collision_layer = 0
collision_mask = 8198
collision_priority = 2.0
script = ExtResource("1_j8dwv")
visibility_mask = NodePath("VisibleOnScreenNotifier2D")
UI_method_name = &"change_Current_Health_Value"
Pickup_Resource = ExtResource("2_4x66r")
apply_random_impulse = true
Item_Area2D = NodePath("Hitbox")
Item_Body = NodePath(".")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("3_nimjx")
region_enabled = true
region_rect = Rect2(0, 0, 12, 12)

[node name="StatPlayer" type="AnimationPlayer" parent="Sprite2D"]
unique_name_in_owner = true
process_priority = 1
process_physics_priority = 1
libraries = {
&"": SubResource("AnimationLibrary_0f6c0")
}

[node name="AnimPlayer" type="AnimationPlayer" parent="Sprite2D"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mxrlf")
}
autoplay = "HealthCapsule_Small"

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 64

[node name="Mask" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_1afij")
metadata/_edit_lock_ = true

[node name="Mask" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ortlo")
debug_color = Color(0.0588612, 0, 0.7, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(6.4, 6.4)

[connection signal="picked_up" from="." to="." method="_on_picked_up"]
